update lmm tutorial 2“ git push

--- a/_posts/2017-12-05-线性混合效应模型教程2.md
+++ b/_posts/2017-12-05-线性混合效应模型教程2.md
@@ -71,7 +71,17 @@ ggplot(data=shrimp,aes(x=PopID,y=M2BW,fill=FamilyID)) +
 
 理论上，我们从每个群体抽样时，抽样个体是代表该群体的随机样本。但是，一个群体内的个体往往存在亲缘关系，譬如（全同胞、半同胞个体）。因此抽样个体存在两个层次：每个群体包括多个家系，每个家系包括数量不等的个体。
 
-从上图中可以看出，每个群体内的不同家系间是存在差异的。为了说明家系结构对分析结果的影响，故意在每个群体中设置了一个均值特别高的家系。在实际测试数据中，这种现象也会经常出现。如果我们分析时不考虑群体内的家系结构，那么家系方差会被累加到残差方差中。
+从上图中可以看出，每个群体内的不同家系间是存在差异的。
+
+每一个家系内的个体，遗传自同一对亲本，相互间相似性更强。不同家系个体的体重均值是不一样的。
+
+这实际上违背了样本观察值的独立性原则，同一个家系内的全同胞个体的体重值实际上是由他们亲本所决定。
+
+针对这种情况，我们把家系效应作为随机效应加入模型中。这相当于，给每个家系设置一个基线，类似于不同的家系有不同的平均体重，也称作随机截距（random intercept）。
+
+在模型中加入家系随机效应，那么观察值的非独立性问题就解决了。
+
+为了说明家系结构对分析结果的影响，故意在每个群体中设置了一个均值特别高的家系。在实际测试数据中，这种现象也会经常出现。如果我们分析时不考虑群体内的家系结构，那么家系方差会被累加到残差方差中。
 
 根据教程1对于固定效应和随机效应的讨论，由于我们的目的是要分析四个群体间的差异，获得每个群体的性能，因此群体更适合做固定效应。每个群体是由多个家系组成的，这些家系只是大量家系的一个随机抽样，因此更加适合作为随机效应。
 
@@ -142,7 +152,7 @@ anova(shrimp.lm.8) #lmerTest包提供该函数
 
 $$M2BW = Pop + Sex + Tank + Sex:M1BW + Pop:Family$$
 
-在模型中加入随机效应，需要使用lme4包中的lmer函数。
+在模型中加入随机效应，需要使用lme4包中的lmer函数。下边代码中的(1|PopID:FamilyID)，表示针对不同的家系，单独估计其随机截距（random intercept）。
 
 分析结果如下：
 
