update lmm tutorial 2

--- a/code/2017-11-29-线型混合效应模型教程2.md
+++ b/code/2017-11-29-线型混合效应模型教程2.md
@@ -82,11 +82,13 @@ ggplot(data=shrimp,aes(x=PopID,y=M2BW,fill=FamilyID)) +
 
 这实际上违背了样本观察值的独立性原则，同一个家系内的全同胞个体的体重值实际上是由他们亲本所决定。
 
-针对这种情况，我们把家系效应作为随机效应加入模型中。这相当于，给每个家系设置一个基线，类似于不同的家系有不同的平均体重，也称作随机截距（random intercept）。
+针对这种情况，我们把家系效应作为随机效应加入模型中。这相当于，给每个家系设置一个基线，类似于不同的家系有不同的平均体重，也称作**随机截距（random intercept）**。
 
 在模型中加入家系随机效应，那么观察值的非独立性问题就解决了。
 
 为了说明家系结构对分析结果的影响，故意在每个群体中设置了一个均值特别高的家系。在实际测试数据中，这种现象也会经常出现。如果我们分析时不考虑群体内的家系结构，那么家系方差会被累加到残差方差中。
+
+如果采取方差分析的方法，你也会发现，忽略家系结构，群体的均方值可能会**非常大，被严重高估**。
 
 根据教程1对于固定效应和随机效应的讨论，由于我们的目的是要分析四个群体间的差异，获得每个群体的性能，因此群体更适合做固定效应。每个群体是由多个家系组成的，这些家系只是大量家系的一个随机抽样，因此更加适合作为随机效应。
 
