update lmm tutorial 2

--- a/code/2017-11-29-线型混合效应模型教程2.md
+++ b/code/2017-11-29-线型混合效应模型教程2.md
@@ -159,7 +159,7 @@ anova(shrimp.lm.8) #lmerTest包提供该函数
 
 $$M2BW = Pop + Sex + Tank + Sex:M1BW + Pop:Family$$
 
-在模型中加入随机效应，需要使用lme4包中的lmer函数。下边代码中的(1|PopID:FamilyID)，表示针对不同的家系，单独估计其随机截距（random intercept）。
+在模型中加入随机效应，需要使用lme4包中的lmer函数。下边代码中的(1\|PopID:FamilyID)，表示针对不同的家系，单独估计其随机截距（random intercept）。
 
 分析结果如下：
 
