update lmm tutorial2

--- a/code/2017-11-29-线型混合效应模型教程2.Rmd
+++ b/code/2017-11-29-线型混合效应模型教程2.Rmd
@@ -65,7 +65,7 @@ ggplot(data=shrimp,aes(x=PopID,y=M2BW,fill=FamilyID)) +
 
 每一个家系内的个体，遗传自同一对亲本，相互间相似性更强。不同家系个体的体重均值是不一样的。
 
-这实际上违背了样本观察值的独立性原则，同一个家系内的全同胞个体的体重值实际上是由他们亲本所决定。
+这实际上**违背了样本观察值的独立性原则**，同一个家系内的全同胞个体的体重值实际上是由他们亲本所决定。
 
 针对这种情况，我们把家系效应作为随机效应加入模型中。这相当于，给每个家系设置一个基线，类似于不同的家系有不同的平均体重，也称作**随机截距（random intercept）**。
 
