--- a/_posts/2017-12-05-线性混合效应模型教程2.md
+++ b/_posts/2017-12-05-线性混合效应模型教程2.md
@@ -75,7 +75,7 @@ ggplot(data=shrimp,aes(x=PopID,y=M2BW,fill=FamilyID)) +
 
 每一个家系内的个体，遗传自同一对亲本，相互间相似性更强。不同家系个体的体重均值是不一样的。
 
-这实际上违背了样本观察值的独立性原则，同一个家系内的全同胞个体的体重值实际上是由他们亲本所决定。
+这实际上违背了**样本观察值的独立性原则**，同一个家系内的全同胞个体的体重值实际上是由他们亲本所决定。
 
 针对这种情况，我们把家系效应作为随机效应加入模型中。这相当于，给每个家系设置一个基线，类似于不同的家系有不同的平均体重，也称作**随机截距（random intercept）**。
 
@@ -86,6 +86,8 @@ ggplot(data=shrimp,aes(x=PopID,y=M2BW,fill=FamilyID)) +
 如果采取方差分析的方法，你也会发现，忽略家系结构，群体的均方值可能会**非常大，被严重高估**。
 
 根据教程1对于固定效应和随机效应的讨论，由于我们的目的是要分析四个群体间的差异，获得每个群体的性能，因此群体更适合做固定效应。每个群体是由多个家系组成的，这些家系只是大量家系的一个随机抽样，因此更加适合作为随机效应。
+
+ps：关于随机效应和固定效应的论述，杜荣骞先生撰写的《生物统计学》第三版p144-151有一个较为精彩的论述，可以参考。
 
 下边我们通过两个模型实例，来看一下家系结构对分析结果的影响。
 
